<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings" >

        <EditTextPreference
            android:key="pref_local_ip"
            android:title="@string/pref_local_ip"
            android:summary="@string/pref_local_ip_summary"
            android:defaultValue="@string/pref_default_ip"/>

        <EditTextPreference
            android:key="pref_external_ip"
            android:title="@string/pref_external_ip"
            android:summary="@string/pref_external_ip_summary"
            android:defaultValue="@string/pref_default_ip"/>

        <Preference
            android:key="pref_local_wifi"
            android:title="@string/pref_local_wifi"
            android:summary="@string/pref_local_wifi_summary" />


        <Preference
            android:key="qrcode"
            android:title="@string/pref_qrcode_title"
            android:summary="@string/pref_qrcode_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_info">

        <Preference
            android:key="license"
            android:title="@string/license"
            android:summary="@string/license_type">
        </Preference>

        <Preference
            android:key="github"
            android:title="@string/source_code"
            android:summary="@string/source_code_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github"
                />

        </Preference>

        <Preference
            android:key="donate"
            android:title="@string/donate"
            android:summary="@string/donate_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/donate_url"
                />

        </Preference>

        <Preference
            android:key="version"
            android:title="@string/version"
            android:summary="">
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>
